# tyrannus

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: tyrannus.rb
assets/: theme_presets.toml
benches/: large_document.rs
contrib/: default-config.toml
contrib/aur/: PKGBUILD  tyrannus-bin.PKGBUILD.in  tyrannus.PKGBUILD.in
scripts/: install-config.sh  update-aur-pkgbuild.py  update-homebrew-formula.py
src/: config.rs  cursor.rs  document.rs  edit.rs  layout.rs  lib.rs  main.rs  proptest_invariants.rs  tests.rs  theme_presets.rs  viewport.rs
tests/: lib_public_api.rs  lib_smoke.rs
titletext/: 3D-ASCII  ANSI-Shadow  Rebel  slant-relief
workflows/: release.yml
